--- a/themes/copronet/assets/scss/page-offer.scss
+++ b/themes/copronet/assets/scss/page-offer.scss
@@ -47,21 +47,20 @@
         text-align: center;
         color: var(--white);
         background: var(--cpn-blue);
+        padding: 20px 0;
 
         strong {
             color: var(--cpn-blue-light);
         }
 
         &::before {
-            display: inline-block;
             content: "";
-            height: 54px;
-            width: 54px;
-            background: url(../img/logo_bars3.svg) no-repeat bottom center /
-                41px 41px;
+            display: block;
+            height: 61px;
+            width: 100vw;
+            background: url(../img/logo_bars.svg) no-repeat center / 51px 51px;
+            /* background: url(../img/logo_bars3.svg) no-repeat center / 51px 51px; */
             position: relative;
-            bottom: -2px;
-            left: -15px;
         }
     }
 
